Add F-PKI paper

--- a/content/publications/2022.md
+++ b/content/publications/2022.md
@@ -12,3 +12,4 @@ paige:
     }
 ---
 
+- **F-PKI: enabling innovation and trust flexibility in the HTTPS public-key infrastructure**. L. Chuat, C. Krähenbühl, P. Mittal, and A. Perrig. In Proceedings of the Symposium on Network and Distributed Systems Security (NDSS), 2022 https://dx.doi.org/10.14722/ndss.2022.24241.
