adapts older publications

--- a/content/publications/2021.md
+++ b/content/publications/2021.md
@@ -12,4 +12,4 @@ paige:
     }
 ---
 
-- **Gobra: Modular Specification and Verification of Go Programs**. F. A. Wolf, L. Arquint, M. Clochard, W. Oortwijn, J. C. Pereira, and P. Müller. In Computer Aided Verification (CAV), http://dx.doi.org/10.1007/978-3-030-81685-8_17.
+- **Gobra: Modular Specification and Verification of Go Programs**. F. A. Wolf, L. Arquint, M. Clochard, W. Oortwijn, J. C. Pereira, and P. Müller. In Computer Aided Verification (CAV), [[PDF](https://pm.inf.ethz.ch/publications/WolfArquintClochardOortwijnPereiraMueller21.pdf)] [[Publisher](https://doi.org/10.1007/978-3-030-81685-8_17)].
